--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="row">
+<div class="container-md">
+    <div class="row gx-1">
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -23,8 +24,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -32,8 +34,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -41,20 +44,22 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title text-center">Ultra Instinct!</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row gx-1">
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -62,8 +67,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -71,8 +77,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -80,8 +87,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
+                <img src="goku.jfif" alt="pic"/>
                 <div class="card-body">
-                    <h5 class="card-title text-center">Special title treatment</h5>
+                    <h5 class="card-title text-center">Ultra Instinct!</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
