--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
@@ -96,7 +96,7 @@
             <div class="container -md">
                 <div class="row gx-1">
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -139,7 +139,7 @@
 
                 <div class="row gx-1">
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card">
+                        <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
