--- a/index.html
+++ b/index.html
@@ -94,86 +94,94 @@
         </div>
         <div class="col py-3">
             <div class="container -md">
-                <div class="row gx-1">
-                    <div class="col-sm">
+                <div class="row my-5">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary " >Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="row gx-1">
-                    <div class="col-sm">
+                <div class="row my-5">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-12 col-lg-3">
                         <div class="card text-center">
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <hr class="w-50">
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
