--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skynet</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
@@ -25,13 +26,16 @@
                     </li>
                     <li>
                         <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Goku's Training Grounds</span> </a>
+                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Goku's Training Grounds</span>
+                        </a>
                         <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                             <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Superpower</span> 1 </a>
+                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Superpower</span> 1
+                                </a>
                             </li>
                             <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Superpower</span> 2 </a>
+                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Superpower</span> 2
+                                </a>
                             </li>
                         </ul>
                     </li>
@@ -76,7 +80,8 @@
                 </ul>
                 <hr>
                 <div class="dropdown pb-4">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+                       id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="goku.jfif" alt="hugenerd" width="30" height="30" class="rounded-circle">
                         <span class="d-none d-sm-inline mx-1">GOKU</span>
                     </a>
@@ -100,10 +105,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary" aria-describedby="tooltip">Learn more</a>
-                                <div id="tooltip" role="tooltip">My tooltip</div>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -112,9 +122,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary ">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -123,9 +139,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -134,9 +156,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -148,9 +176,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -159,9 +193,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -170,9 +210,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -181,9 +227,15 @@
                             <img src="goku.jfif" class="pt-2" alt="pic"/>
                             <div class="card-body">
                                 <h5 class="card-title text-center">Ultra Instinct!</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
                                 <hr class="w-50">
-                                <a href="#" class="btn btn-primary">Learn more</a>
+                                <!--tooltip-->
+                                <span>
+                                    <span class="tt" data-bs-placement="bottom" title="Nothing to see here">
+                                        <a href="#" class="btn btn-primary">Learn more</a>
+                                    </span>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -194,12 +246,14 @@
 </div>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"
 <script>
-    const button = document.querySelector('#btn');
-    const tooltip = document.querySelector('#tooltip');
-
-    const popperInstance = Popper.createPopper(button, tooltip);
+    const tooltips = document.querySelectorAll('.tt')
+    tooltips.forEach(t => {
+        new bootstrap.Tooltip(t)
+    })
 </script>
+
 
 </body>
 </html>
